<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/order_bg"
        android:layout_height="wrap_content">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:title="@string/order_title"
        app:titleTextColor="@color/white"
        android:theme="@style/ToolBarStyle"
        android:layout_height="?attr/actionBarSize" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cost"
                        android:textSize="16sp"
                        android:textColor="@color/yellow" />
                    <TableRow
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content" >
                        <TextView
                            android:text="£"
                            android:textSize="16sp"
                            android:textColor="@color/dark_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/total_cost"
                            android:textSize="16sp"
                            android:textColor="@color/dark_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:text="@string/review_order_header"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                <TextView
                    android:id="@+id/footer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:autoLink="none"
                    android:textColor="@color/dark_gray"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>